--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,7 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+*.g.*
+/lib/app/locator.config.dart
+/lib/app/routes.gr.dart
