--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,16 @@ dependencies:
   flutter:
     sdk: flutter
 
+  stacked: ^2.2.8
+  stacked_services: ^0.8.16
+  json_annotation:
+  sizer: ^2.0.15
+  dio: ^4.0.4
+
+  get_it:
+  injectable:
+  auto_route: ^0.6.9
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -45,6 +55,11 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+
+  json_serializable:
+  injectable_generator:
+  auto_route_generator:
+  build_runner:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
