--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>io.flutter.embedded_views_preview</key>
+	<string>YES</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>Need Current location access</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+    <string>Get your current location for delivery</string>
+    <key>UIBackgroundModes</key>
+    <string>location</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
