--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,20 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+  easy_localization: ^3.0.0
+  sizer: ^2.0.15
+  email_validator: ^2.0.1
+  intl: ^0.17.0
+  onboarding: ^2.1.0
+  google_maps_flutter: ^2.0.1
+  geocoding: ^2.0.2
+  geolocator: ^8.1.0
+  intl_phone_number_input: ^0.7.0+2
+
+  flutter_localizations:
+    sdk: flutter
+
+
 
   json_serializable:
   injectable_generator:
@@ -70,9 +84,12 @@ flutter:
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
+  generate: true
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
+  assets:
+    - assets/translations/
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
