--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   injectable:
   auto_route: ^0.6.9
 
+  onboarding: ^2.1.0
+  introduction_screen: ^2.1.0
+  hive: ^2.0.5
+  hive_flutter: ^1.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -58,7 +62,6 @@ dev_dependencies:
   easy_localization: ^3.0.0
   email_validator: ^2.0.1
   intl: ^0.17.0
-  onboarding: ^2.1.0
   google_maps_flutter: ^2.0.1
   geocoding: ^2.0.2
   geolocator: ^8.1.0
@@ -86,10 +89,9 @@ flutter:
   generate: true
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+   # To add assets to your application, add an assets section, like this:
+  assets:
+     - assets/images/onboarding/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
