--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,9 @@ dev_dependencies:
   geocoding: ^2.0.2
   geolocator: ^8.1.0
   intl_phone_number_input: ^0.7.0+2
+  carousel_pro: ^1.0.0
+  lottie: ^1.2.1
+  pin_code_fields: ^7.3.0
 
   flutter_localizations:
     sdk: flutter
@@ -92,6 +95,8 @@ flutter:
    # To add assets to your application, add an assets section, like this:
   assets:
      - assets/images/onboarding/
+     - assets/animations/
+     - assets/images/flags/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
