--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,7 @@ dev_dependencies:
   flutter_rating_bar: ^4.0.0
   bottom_navy_bar: ^5.6.0
   flutter_slider_drawer: ^2.1.1
+  sliding_up_panel: ^2.0.0+1
 
   flutter_localizations:
     sdk: flutter
