Place order page settings

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,9 +82,10 @@ dev_dependencies:
   group_radio_button: ^1.2.0
   #  flutter_dialogs: ^2.1.1
   coupon_uikit: ^0.0.1
+  image_picker: ^0.8.4+10
 
   sdk:
-    path: F:\TelrSDK_Flutter_17072021\TelrSDK_Flutter\sdk
+    path: C:\Users\umarf\Documents\GitHub\labouchee\sdk\sdk
 
 
   flutter_localizations:
