--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,7 +85,7 @@ dev_dependencies:
   image_picker: ^0.8.4+10
 
   sdk:
-    path: F:\TelrSDK_Flutter_17072021\TelrSDK_Flutter\sdk
+    path: C:\Users\umarf\Documents\GitHub\labouchee\sdk\sdk
 #    path: F:\TelrSDK_Flutter_17072021\TelrSDK_Flutter\sdk
 
 
