--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,12 +38,13 @@ dependencies:
 
   get_it:
   injectable:
-  auto_route: ^0.6.9
+  auto_route: ^3.0.0
 
   onboarding: ^2.1.0
   introduction_screen: ^2.1.0
   hive: ^2.0.5
   hive_flutter: ^1.1.0
+  device_info_plus: ^3.2.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -85,7 +86,7 @@ dev_dependencies:
   image_picker: ^0.8.4+10
 
   sdk:
-    path: C:\Users\umarf\Documents\GitHub\labouchee\sdk\sdk
+    path: F:\TelrSDK_Flutter_17072021\TelrSDK_Flutter\sdk
 #    path: F:\TelrSDK_Flutter_17072021\TelrSDK_Flutter\sdk
 
 
