--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,6 +84,7 @@ dev_dependencies:
   #  flutter_dialogs: ^2.1.1
   coupon_uikit: ^0.0.1
   image_picker: ^0.8.4+10
+  dotted_border: ^2.0.0+2
 
   sdk:
     path: C:\Users\umarf\Documents\GitHub\labouchee\sdk\sdk
