--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,7 +85,8 @@ dev_dependencies:
   coupon_uikit: ^0.0.1
   image_picker: ^0.8.4+10
   dotted_border: ^2.0.0+2
-
+  flutter_native_splash: ^2.1.0
+  flutter_launcher_icons: ^0.9.2
   sdk:
     path: .\sdk\sdk
 #    path: F:\TelrSDK_Flutter_17072021\TelrSDK_Flutter\sdk
@@ -142,3 +143,15 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+flutter_native_splash:
+  color: "#ffffff"
+  image: assets/images/splash.png
+
+  android_12:
+    image: assets/images/splash.png
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/icon.jpg"
