--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -112,11 +112,22 @@ flutter:
   generate: true
   uses-material-design: true
 
+  fonts:
+    - family: ExoRegular
+      fonts:
+        - asset: assets/fonts/Exo-Regular.otf
+    - family: DaxMedium
+      fonts:
+        - asset: assets/fonts/Dax-Medium.ttf
+        - asset: assets/fonts/Dax-Bold.ttf
+          weight: 700
+
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/onboarding/
     - assets/animations/
     - assets/images/flags/
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -129,18 +140,7 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
 
