--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,6 +89,7 @@ dev_dependencies:
   flutter_launcher_icons: ^0.9.2
   flutter_animated_dialog: ^2.0.1
   double_back_to_close: ^2.0.0
+  cached_network_image: ^3.2.0
   sdk:
     path: .\sdk\sdk
 #    path: F:\TelrSDK_Flutter_17072021\TelrSDK_Flutter\sdk
