--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,6 +89,7 @@ dev_dependencies:
   flutter_launcher_icons: ^0.9.2
   flutter_animated_dialog: ^2.0.1
   double_back_to_close: ^2.0.0
+  url_launcher:
   cached_network_image: ^3.2.0
   sdk:
     path: .\sdk\sdk
@@ -119,11 +120,10 @@ flutter:
     - family: ExoRegular
       fonts:
         - asset: assets/fonts/Exo-Regular.otf
-    - family: DaxMedium
+    - family: GEDinar
       fonts:
-        - asset: assets/fonts/Dax-Medium.ttf
-        - asset: assets/fonts/Dax-Bold.ttf
-          weight: 700
+        - asset: assets/fonts/GEDinarOne-Medium.ttf
+        - asset: assets/fonts/GEDinarOne-Light.ttf
 
   # To add assets to your application, add an assets section, like this:
   assets:
