--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -92,7 +92,7 @@ dev_dependencies:
   url_launcher:
   cached_network_image: ^3.2.0
   sdk:
-    path: .\sdk\sdk
+    path: ./sdk/sdk
 #    path: F:\TelrSDK_Flutter_17072021\TelrSDK_Flutter\sdk
 
 
